--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "query-cache-middleware",
-  "version": "1.0.0",
+  "name": "unified-cacher",
+  "version": "1.3.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,8 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "fs-extra": "^11.2.0",
+    "node-cache": "^5.1.2",
     "redis": "^4.7.0"
   }
 }
